--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -2,11 +2,18 @@
     padding: 0.5rem 1rem;
     background: var(--white);
     border-radius: 8px;
-    border: none;
+    border: 4px solid var(--white);
     color: var(--red);
     font-weight: 700;
     font-size: 1.5em;
     width: 100%;
     box-shadow: var(--shadow-lg);
     text-transform: uppercase;
+    margin-bottom: 2rem;
+    cursor: pointer;
+}
+
+.button--outline {
+    color: var(--white);
+    background: transparent;
 }
