--- a/src/components/timer/Timer.module.css
+++ b/src/components/timer/Timer.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-flow: column;
     width: 270px;
+    position: relative;
 }
 
 .countdown {
@@ -11,4 +12,5 @@
     font-size: 5rem;
     text-shadow: var(--shadow-lg);
     margin-bottom: 1rem;
+    margin-top: 2rem;
 }
